# learn-opengl

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: ImGui.cmake
glad/include/glad/: gl.h
scripts/: gen_filelist.sh  iwyu.sh  make_all_setters.py  make_uniform_setters.py  parse.py  shader_interop.py  shader_structs.py  shader_uniforms.py
src/: assimp2glm.hpp  camera.cpp  camera.hpp  common.hpp  filelist.cmake  genTerrain.cpp  genTerrain.hpp  glmFormatters.hpp  imguiConfig.cpp  imguiConfig.hpp  lighting.cpp  lighting.hpp  loadTexture.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  sceneConf.cpp  sceneConf.hpp  sceneObject.cpp  sceneObject.hpp  sdlConfig.cpp  sdlConfig.hpp  shaderStructs.cpp  shaderStructs.hpp  shaders.cpp  shaders.hpp  stbImageBuild.cpp  vertexData.cpp  vertexData.hpp
src/shaders/: all.vert.glsl  fragmentShader.frag.glsl  lightCube.frag.glsl  lighting.glsl  object.frag.glsl  object.vert.glsl  shaderCommon.hpp  singleColor.frag.glsl  singleColor.vert.glsl  terrain.frag.glsl  terrain.vert.glsl  vertexShader.vert.glsl
